// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Container > Default > should render correctly 1`] = `
<DocumentFragment>
  <section
    class="sc-bczSft hVNnBN"
    data-rc="GridContainer"
  >
    <div
      class="sc-bczSft hlbvid"
    >
      Container Content
    </div>
  </section>
</DocumentFragment>
`;

exports[`Container Default should render correctly 1`] = `
<DocumentFragment>
  <section
    class="sc-bcXHqe bLlgzy"
    data-rc="GridContainer"
  >
    <div
      class="sc-bcXHqe kVKkQK"
    >
      Container Content
    </div>
  </section>
</DocumentFragment>
`;
